Update Get Token

--- a/axway-api/.project
+++ b/axway-api/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DO-SNAP-BSB2</name>
+	<name>BSB-DO</name>
 	<comment></comment>
 	<projects>
 	</projects>
